Bug 420422 - Indian Rupee has new symbol since 7 years,it is ₹
Summary: Indian Rupee has new symbol since 7 years,it is ₹
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-22 14:12 UTC by Suresh PB
Modified: 2020-06-05 04:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Suresh PB 2020-04-22 14:12:48 UTC
SUMMARY
Indian Rupee has new symbol since 7 years,it is ₹

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT
Please change the symbol of Indian Rupee to ₹

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
All versions need to change
Comment 1 Thomas Baumgart 2020-04-22 16:51:47 UTC
Git commit 27b7a488c4f983525e0938facbb9467a0aaff8e2 by Thomas Baumgart.
Committed on 22/04/2020 at 16:51.
Pushed by tbaumgart into branch '5.0'.

Update symbol for Indian Rupee

This will use the new symbol in new data files but not update existing
files. Currently there's no other way than patching the data file
directly to change the symbol.
FIXED-IN: 5.0.9

M  +1    -1    kmymoney/mymoney/mymoneyfile.cpp

https://commits.kde.org/kmymoney/27b7a488c4f983525e0938facbb9467a0aaff8e2
Comment 2 Suresh PB 2020-04-23 08:13:41 UTC
Post opening the kmy file, user can be allowed to select the currency and update. This will benefit existing users.
Comment 3 Thomas Baumgart 2020-04-23 13:37:46 UTC
Re-closed and opened bug #420458 instead.