Update symbol for Indian Rupee

This will use the new symbol in new data files but not update existing
files. Currently there's no other way than patching the data file
directly to change the symbol.

BUG: 420422
FIXED-IN: 5.0.9